--- a/WebMU.html
+++ b/WebMU.html
@@ -5,8 +5,9 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
+<p>this is a second paragraph</p>
+<p>This is a third paragraph</p>
 
 </body>
 </html>
